Small tweaks to interactive

--- a/examples/interactive.ipynb
+++ b/examples/interactive.ipynb
@@ -2,147 +2,147 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PLIST"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(defparameter plist (list :fu 3 :baz \"Some text\"))"
+    "(defparameter plist (list :lima 7 :yankee \"bar\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b4a55074f134824773119667c37c6cf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(jupyter-widgets:make-interactive-plist\n",
-    "  '((:indicator :fu :type :int :label \"fu (int)\")\n",
-    "    (:indicator :bar :type :int :label \"bar (bounded int)\" :style :bounded-text)\n",
-    "    (:indicator :quux :type :int :label \"quux (slider int)\" :style :slider :min -10 :max 10)\n",
-    "    (:indicator :wibble :type :float :label \"wibble (float)\")\n",
-    "    (:indicator :baz :type :string :label \"baz (string)\")\n",
-    "    (:indicator :gronk :type :bool :label \"gronk (bool checkbox)\")\n",
-    "    (:indicator :angle :type :bool :label \"angle (bool toggle)\" :description \"angle\" :style :toggle))\n",
+    "  '((:indicator :alfa :type :bool\n",
+    "     :label \"alfa (bool check)\")\n",
+    "    (:indicator :bravo :type :bool :style :toggle\n",
+    "     :label \"bravo (bool toggle)\" :description \"toggle\")\n",
+    "    (:indicator :charlie :type :color :default \"blue\"\n",
+    "     :label \"charlie (color)\")\n",
+    "    (:indicator :delta :type :date\n",
+    "     :label \"delta (date)\")\n",
+    "    (:indicator :echo :type :file\n",
+    "     :label \"echo (file)\" :accept \".txt\")\n",
+    "    (:indicator :foxtrot :type :file-multiple\n",
+    "     :label \"foxtrot (file-multiple)\")\n",
+    "    (:indicator :golf :type :float\n",
+    "     :label \"golf (float text)\")\n",
+    "    (:indicator :hotel :type :float :style :log-slider\n",
+    "     :label \"hotel (float log-slider)\")\n",
+    "    (:indicator :india :type :float :style :slider\n",
+    "     :label \"india (float slider)\")\n",
+    "    (:indicator :juliett :type :float :style :bounded-text\n",
+    "     :label \"juliett (float bounded-text)\")\n",
+    "    (:indicator :kilo :type :float-range\n",
+    "     :label \"kilo (float-range)\")\n",
+    "    (:indicator :lima :type :int :default 3\n",
+    "     :label \"lima (int text)\")\n",
+    "    (:indicator :mike :type :int :style :slider\n",
+    "     :label \"mike (int slider)\")\n",
+    "    (:indicator :november :type :int :style :bounded-text :min -10 :max 10\n",
+    "     :label \"november (int bounded-text)\")\n",
+    "    (:indicator :oscar :type :int-range\n",
+    "     :label \"oscar (int-range)\")\n",
+    "    (:indicator :papa :type :option\n",
+    "     :label \"papa (option select)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :quebec :type :option :style :dropdown\n",
+    "     :label \"quebec (option dropdown)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :romeo :type :option :style :radio\n",
+    "     :label \"romeo (option radio)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :sierra :type :option :style :slider\n",
+    "     :label \"sierra (option slider)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :tango :type :option :style :toggle\n",
+    "     :label \"tango (option toggle)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :uniform :type :option-range\n",
+    "     :label \"uniform (option-range)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :victor :type :option-multiple\n",
+    "     :label \"victor (option-multiple)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator :whiskey :type :string\n",
+    "     :label \"whiskey (string text)\")\n",
+    "    (:indicator :xray :type :string :style :area\n",
+    "     :label \"xray (string area)\")\n",
+    "    (:indicator :yankee :type :string :style :combo\n",
+    "     :label \"yankee (string combo)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\")))\n",
     "  plist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(:FU 3 :BAZ \"Some text\")"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ALIST"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(defparameter alist (list (cons \"fu\" 1) (cons \"lima\" (list \"wibble\" \"wibble\")) (cons \"quux\" \"gronk\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d7e2cc1fc844ad7ba503a2bb9d310df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(jupyter-widgets:make-interactive-alist\n",
-    "  '((:indicator \"fu\" :type :int :label \"fu (int)\")\n",
-    "    (:indicator \"baz\" :type :string :label \"baz (string)\")\n",
-    "    (:indicator \"quux\" :type :option :label \"quux (option)\" :options (\"wibble\" \"gronk\" \"kilroy\"))\n",
-    "    (:indicator \"foxtrot\" :type :option :label \"foxtrot (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :dropdown)\n",
-    "    (:indicator \"india\" :type :option :label \"india (option dropdown)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :slider)\n",
-    "    (:indicator \"tango\" :type :option :label \"tango (option radio)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio)\n",
-    "    (:indicator \"november\" :type :option :label \"november (option toggle)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :toggle)\n",
-    "    (:indicator \"lima\" :type :option-range :label \"lima (option range)\" :options (\"wibble\" \"gronk\" \"kilroy\"))\n",
-    "    (:indicator \"mike\" :type :option-set :label \"mike (option set)\" :options (\"wibble\" \"gronk\" \"kilroy\") :style :radio))\n",
+    "  '((:indicator \"alfa\" :type :bool\n",
+    "     :label \"alfa (bool check)\")\n",
+    "    (:indicator \"bravo\" :type :bool :style :toggle\n",
+    "     :label \"bravo (bool toggle)\" :description \"toggle\")\n",
+    "    (:indicator \"charlie\" :type :color :default \"blue\"\n",
+    "     :label \"charlie (color)\")\n",
+    "    (:indicator \"delta\" :type :date\n",
+    "     :label \"delta (date)\")\n",
+    "    (:indicator \"echo\" :type :file\n",
+    "     :label \"echo (file)\" :accept \".txt\")\n",
+    "    (:indicator \"foxtrot\" :type :file-multiple\n",
+    "     :label \"foxtrot (file-multiple)\")\n",
+    "    (:indicator \"golf\" :type :float\n",
+    "     :label \"golf (float text)\")\n",
+    "    (:indicator \"hotel\" :type :float :style :log-slider\n",
+    "     :label \"hotel (float log-slider)\")\n",
+    "    (:indicator \"india\" :type :float :style :slider\n",
+    "     :label \"india (float slider)\")\n",
+    "    (:indicator \"juliett\" :type :float :style :bounded-text\n",
+    "     :label \"juliett (float bounded-text)\")\n",
+    "    (:indicator \"kilo\" :type :float-range\n",
+    "     :label \"kilo (float-range)\")\n",
+    "    (:indicator \"lima\" :type :int :default 3\n",
+    "     :label \"lima (int text)\")\n",
+    "    (:indicator \"mike\" :type :int :style :slider\n",
+    "     :label \"mike (int slider)\")\n",
+    "    (:indicator \"november\" :type :int :style :bounded-text :min -10 :max 10\n",
+    "     :label \"november (int bounded-text)\")\n",
+    "    (:indicator \"oscar\" :type :int-range\n",
+    "     :label \"oscar (int-range)\")\n",
+    "    (:indicator \"papa\" :type :option\n",
+    "     :label \"papa (option select)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"quebec\" :type :option :style :dropdown\n",
+    "     :label \"quebec (option dropdown)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"romeo\" :type :option :style :radio\n",
+    "     :label \"romeo (option radio)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"sierra\" :type :option :style :slider\n",
+    "     :label \"sierra (option slider)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"tango\" :type :option :style :toggle\n",
+    "     :label \"tango (option toggle)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"uniform\" :type :option-range\n",
+    "     :label \"uniform (option-range)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"victor\" :type :option-multiple\n",
+    "     :label \"victor (option-multiple)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\"))\n",
+    "    (:indicator \"whiskey\" :type :string\n",
+    "     :label \"whiskey (string text)\")\n",
+    "    (:indicator \"xray\" :type :string :style :area\n",
+    "     :label \"xray (string area)\")\n",
+    "    (:indicator \"yankee\" :type :string :style :combo\n",
+    "     :label \"yankee (string combo)\" :options (\"fu\" \"bar\" \"wibble\" \"gronk\" \"kilroy\")))\n",
     "  alist :test #'string=)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((\"november\" . \"kilroy\") (\"fu\" . 1) (\"lima\" \"wibble\" \"wibble\")\n",
-       " (\"quux\" . \"gronk\"))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alist"
    ]
