Add widget specific trait silence and fix some bugs

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,40 @@
      "output_type": "stream",
      "text": [
       "arithmetic error DIVISION-BY-ZERO signalled\n",
-      "Operation was (/ 1 0)."
+      "Operation was (/ 1 0).\n",
+      "   [Condition of type DIVISION-BY-ZERO]\n",
+      "\n",
+      "#<ENVIRONMENT {100386F333}>\n",
+      "   [Environment of thread #<THREAD \"SHELL Thread\" RUNNING {1001DFA6B3}>]\n",
+      "\n",
+      "\n",
+      "Backtrace:\n",
+      " 5: (SB-KERNEL::%SIGNAL arithmetic error DIVISION-BY-ZERO signalled\n",
+      "Operation was (/ 1 0).)\n",
+      " 6: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))\n",
+      " 7: (\"DIVISION-BY-ZERO-ERROR\" 1 0)\n",
+      " 8: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F56EDD0DC40) #<unused argument>)\n",
+      " 9: (\"foreign function: call_into_lisp\")\n",
+      " 10: (\"foreign function: funcall2\")\n",
+      " 11: (\"foreign function: interrupt_internal_error\")\n",
+      " 12: (\"foreign function: #x5611E9A9E4F3\")\n",
+      " 13: (SB-KERNEL::INTEGER-/-INTEGER 1 0)\n",
+      " 14: (/ 1 0)\n",
+      " 15: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)\n",
+      " 16: (EVAL (/ 1 0))\n",
+      " 17: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))\n",
+      " 18: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))\n",
+      " 19: (JUPYTER::HANDLE-EXECUTE-REQUEST #<KERNEL {10042A5B83}> #<MESSAGE {10035FF883}>)\n",
+      " 20: (JUPYTER::HANDLE-SHELL-MESSAGE #<KERNEL {10042A5B83}> #<MESSAGE {10035FF883}>)\n",
+      " 21: (JUPYTER::RUN-SHELL #<KERNEL {10042A5B83}>)\n",
+      " 22: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))\n",
+      " 23: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
+      " 24: ((FLET \"WITHOUT-INTERRUPTS-BODY-14\" :IN SB-THREAD::RUN))\n",
+      " 25: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
+      " 26: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))\n",
+      " 27: (SB-THREAD::RUN)\n",
+      " 28: (\"foreign function: call_into_lisp\")\n",
+      " 29: (\"foreign function: funcall1\")"
      ]
     }
    ],
@@ -319,7 +352,8 @@
        "foo `quux`"
       ],
       "text/plain": [
-       "inline-value"
+       "## wibble\n",
+       "foo `quux`"
       ]
      },
      "execution_count": 9,
@@ -959,11 +993,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "\n",
-      "LISP rocks? (yes or no) yes\n"
+      "LISP rocks? (yes or no)  yes\n"
      ]
     },
     {
@@ -992,7 +1026,7 @@
        "For the record Lisp **rocks**!"
       ],
       "text/plain": [
-       "inline-value"
+       "For the record Lisp **rocks**!"
       ]
      },
      "execution_count": 13,
@@ -1036,23 +1070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is your quest? To determine the airspeed of an unladen swallow.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "QUEST"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1099,7 @@
        "NIL"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1080,7 +1107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your quest is: To determine the airspeed of an unladen swallow."
+      "Your quest is: Search for the holy grail."
      ]
     }
    ],
@@ -1097,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1164,7 @@
        "NO-OUTPUT-READER"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1147,7 +1174,7 @@
        "T"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1182,89 +1209,6 @@
    "metadata": {},
    "source": [
     "Multiple value returns function correctly and previous result/form are set. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "A1"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "A2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "B"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C1"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "C3"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((C1 C2 C3) (B) (A1 A2))"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(values 'a1 'a2) \n",
-    "'b \n",
-    "(values 'c1 'c2 'c3) \n",
-    "(list / // ///)"
    ]
   },
   {
@@ -1335,10 +1279,93 @@
     {
      "data": {
       "text/plain": [
-       "(C1 B A1)"
+       "((C1 C2 C3) (B) (A1 A2))"
       ]
      },
      "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(values 'a1 'a2) \n",
+    "'b \n",
+    "(values 'c1 'c2 'c3) \n",
+    "(list / // ///)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "A2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "B"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C1"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "C3"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(C1 B A1)"
+      ]
+     },
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1388,7 @@
        "1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1371,7 +1398,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1381,7 +1408,7 @@
        "3"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1391,7 +1418,7 @@
        "((/ 9 3) (- 4 2) (+ 0 1))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,9 +1440,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Common Lisp",
+   "display_name": "Common Lisp (SBCL)",
    "language": "common-lisp",
-   "name": "common-lisp"
+   "name": "common-lisp_sbcl"
   },
   "language_info": {
    "codemirror_mode": "text/x-common-lisp",
@@ -1423,7 +1450,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "2.0.4"
+   "version": "2.0.8"
   }
  },
  "nbformat": 4,
