--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -2,27 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To load \"alexandria\":\n",
+      "  Load 1 ASDF system:\n",
+      "    alexandria\n",
+      "\n",
+      "; Loading \"alexandria\"\n",
+      "\n",
+      "To load \"png\":\n",
+      "  Load 1 ASDF system:\n",
+      "    png\n",
+      "\n",
+      "; Loading \"png\"\n",
+      "[package image]...................................\n",
+      "[package png]; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpAR3FSGEY.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -Wimplicit-fallthrough -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.23.0/ /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.c\n",
+      ".; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpJAIDFZTC -Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now -g -Wl,--export-dynamic /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.o\n",
+      "; /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.grovel-tmp.lisp\n",
+      "; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper-tmp9V47YWQF.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -Wimplicit-fallthrough -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.23.0/ /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper.c\n",
+      "; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers.so -shared -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -Wimplicit-fallthrough -fno-omit-frame-pointer -momit-leaf-frame-pointer /home/yitzi/.cache/common-lisp/sbcl-2.0.8-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper.o\n",
+      "....................................\n",
+      "[package bmp].....................................\n",
+      "[package pnm]......\n",
+      "To load \"iterate\":\n",
+      "  Load 1 ASDF system:\n",
+      "    iterate\n",
+      "\n",
+      "; Loading \"iterate\"\n",
+      "\n",
+      "To load \"flexi-streams\":\n",
+      "  Load 1 ASDF system:\n",
+      "    flexi-streams\n",
+      "\n",
+      "; Loading \"flexi-streams\"\n",
+      "\n",
+      "To load \"lparallel\":\n",
+      "  Load 1 ASDF system:\n",
+      "    lparallel\n",
+      "\n",
+      "; Loading \"lparallel\"\n",
+      "[package lparallel.util]..........................\n",
+      "[package lparallel.thread-util]...................\n",
+      "[package lparallel.raw-queue].....................\n",
+      "[package lparallel.cons-queue]....................\n",
+      "[package lparallel.vector-queue]..................\n",
+      "[package lparallel.queue].........................\n",
+      "[package lparallel.counter].......................\n",
+      "[package lparallel.spin-queue]....................\n",
+      "[package lparallel.kernel]........................\n",
+      "[package lparallel.kernel-util]...................\n",
+      "[package lparallel.promise].......................\n",
+      "[package lparallel.ptree].........................\n",
+      "[package lparallel.slet]..........................\n",
+      "[package lparallel.defpun]........................\n",
+      "[package lparallel.cognate].......................\n",
+      "[package lparallel]\n",
+      "To load \"cl-cpus\":\n",
+      "  Load 1 ASDF system:\n",
+      "    cl-cpus\n",
+      "\n",
+      "; Loading \"cl-cpus\"\n",
+      "[package cl-cpus]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(:ALEXANDRIA :PNG :ITERATE :FLEXI-STREAMS :LPARALLEL :CL-CPUS)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "(ql:quickload '(:alexandria :png :iterate :flexi-streams :lparallel :cl-cpus))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<LPARALLEL.KERNEL:KERNEL :NAME \"lparallel\" :WORKER-COUNT 16 :USE-CALLER NIL :ALIVE T :SPIN-COUNT 2000 {1004117613}>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(setf lparallel:*kernel* (lparallel:make-kernel (cpus:get-number-of-processors)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "JULIA-COUNT"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(defun julia-count (z c &key (max 255))\n",
     "  (do ((i 0 (1+ i))\n",
@@ -34,9 +139,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<JUPYTER-WIDGETS:TRAIT-METACLASS COMMON-LISP-USER::JULIA-WIDGET>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CALCULATE-ROW"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UPDATE"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "#<STANDARD-METHOD COMMON-LISP:INITIALIZE-INSTANCE :AFTER (JULIA-WIDGET) {100480FA03}>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(defclass julia-widget (jupyter-widgets:grid-box)\n",
     "  ((image\n",
@@ -158,9 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3f251c748f346f5379be2779be063b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "(make-instance 'julia-widget)"
    ]
