--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "409c7fa2781c4141ab3bd21f54e34374",
+       "model_id": "8484d0c91b11452cbc1a72d30d8e5c76",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "(defvar a-button (make-instance 'button :description \"Click me\" :on-click (lambda (w) (setf (widget-description w) \"I've been clicked.\"))))\n",
+    "(defvar a-button (make-instance 'button :description \"Click me\" :on-click (list (lambda (w) (setf (widget-description w) \"I've been clicked.\")))))\n",
     "\n",
     "a-button"
    ]
@@ -74,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d1b660df4e43f3c5b02747ff34855f",
+       "model_id": "5a60fecba7ce4572b3dfbd3f9d1ed6da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "53"
       ]
      },
      "execution_count": 4,
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d1b660df4e43f3c5b02747ff34855f",
+       "model_id": "5a60fecba7ce4572b3dfbd3f9d1ed6da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Common Lisp",
+   "display_name": "Common Lisp (SBCL)",
    "language": "common-lisp",
-   "name": "common-lisp"
+   "name": "common-lisp_sbcl"
   },
   "language_info": {
    "codemirror_mode": "text/x-common-lisp",
@@ -196,7 +196,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "2.0.4"
+   "version": "2.0.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
