--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -8,16 +8,32 @@
     {
      "data": {
       "text/plain": [
-       "T"
+       "A-BUTTON"
       ]
      },
      "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6d1783994284c47f132d25b42a15c12",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "(use-package :jupyter-widgets)"
+    "(defvar a-button (jw:make-button :description \"Click me\" :on-click (list (lambda (w) (setf (jw:widget-description w) \"I've been clicked.\")))))\n",
+    "\n",
+    "a-button"
    ]
   },
   {
@@ -28,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "A-BUTTON"
+       "A-INT-SLIDER"
       ]
      },
      "execution_count": 2,
@@ -38,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8484d0c91b11452cbc1a72d30d8e5c76",
+       "model_id": "27a88fde460b47373acae976fe7c5314",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,9 +67,9 @@
     }
    ],
    "source": [
-    "(defvar a-button (make-instance 'button :description \"Click me\" :on-click (list (lambda (w) (setf (widget-description w) \"I've been clicked.\")))))\n",
+    "(defvar a-int-slider (jw:make-int-slider))\n",
     "\n",
-    "a-button"
+    "a-int-slider"
    ]
   },
   {
@@ -64,32 +80,16 @@
     {
      "data": {
       "text/plain": [
-       "A-INT-SLIDER"
+       "27"
       ]
      },
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a60fecba7ce4572b3dfbd3f9d1ed6da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "(defvar a-int-slider (make-instance 'int-slider))\n",
-    "\n",
-    "a-int-slider"
+    "(jw:widget-value a-int-slider)"
    ]
   },
   {
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "53"
+       "10"
       ]
      },
      "execution_count": 4,
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "(widget-value a-int-slider)"
+    "(setf (jw:widget-value a-int-slider) 10)"
    ]
   },
   {
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "\"vertical\""
       ]
      },
      "execution_count": 5,
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "(setf (widget-value a-int-slider) 10)"
+    "(setf (jw:widget-orientation a-int-slider) \"vertical\")"
    ]
   },
   {
@@ -139,28 +139,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "\"vertical\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(setf (widget-orientation a-int-slider) \"vertical\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a60fecba7ce4572b3dfbd3f9d1ed6da",
+       "model_id": "27a88fde460b47373acae976fe7c5314",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,17 +176,55 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "2.0.8"
+   "version": "2.1.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "164688cc0c2d41a59f934eb6fc561467": {
+     "1c73e203ebb641736338d165f1d1cf2b": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.5.0",
       "model_name": "ButtonStyleModel",
+      "state": {}
+     },
+     "27a88fde460b47373acae976fe7c5314": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "IntSliderModel",
       "state": {
-       "_view_module_version": "2.0.0"
+       "layout": "IPY_MODEL_34ffa2ac7f8b4dc13483e64fa3bbc532",
+       "orientation": "vertical",
+       "style": "IPY_MODEL_3053b0a84e404f4223745eebfbd9cad5",
+       "value": 10
+      }
+     },
+     "3053b0a84e404f4223745eebfbd9cad5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "SliderStyleModel",
+      "state": {}
+     },
+     "34ffa2ac7f8b4dc13483e64fa3bbc532": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "76d9935234944092dfa3e2ea2dfd5813": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "d6d1783994284c47f132d25b42a15c12": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "description": "Click me",
+       "layout": "IPY_MODEL_76d9935234944092dfa3e2ea2dfd5813",
+       "style": "IPY_MODEL_1c73e203ebb641736338d165f1d1cf2b",
+       "tooltip": null
       }
      }
     },
